syntax="proto3";

package go.micro.service.hello;

service Hello{

  rpc SayHello(SayRequest) returns (SayResponse){

  }

}

message SayRequest{
  string message=1;
}

message SayResponse{
  string answer=1;
}